--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,17 +12,19 @@
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo-google-fonts/playfair-display": "^0.4.2",
     "expo": "~54.0.32",
-    "expo-font": "^14.0.11",
-    "expo-splash-screen": "^31.0.13",
+    "expo-font": "~14.0.11",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
-    "react": "19.1.0",
+    "lucide-react-native": "^0.473.0",
+    "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-native": "0.81.5",
-    "react-native-svg": "^15.15.1",
+    "react-native": "^0.81.5",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-svg": "^15.12.1",
     "react-native-web": "^0.21.2"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
+    "@types/react": "~19.1.10",
     "typescript": "~5.9.2"
   },
   "private": true
