--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "@convex-dev/auth": "^0.0.90",
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo-google-fonts/playfair-display": "^0.4.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "convex": "^1.31.6",
     "expo": "~54.0.32",
     "expo-font": "~14.0.11",
