--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,12 +1,12 @@
 {
   "expo": {
-    "name": "mobile",
-    "slug": "mobile",
+    "name": "Smart Classroom",
+    "slug": "smartclassroom",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -14,6 +14,7 @@
     },
     "ios": {
       "supportsTablet": true,
+      "bundleIdentifier": "com.smartclassroom.mobile",
       "infoPlist": {
         "NFCReaderUsageDescription": "We use NFC to link your student card and unlock doors.",
         "NSFaceIDUsageDescription": "We use Face ID to securely verify your identity for attendance.",
@@ -21,6 +22,7 @@
       }
     },
     "android": {
+      "package": "com.smartclassroom.mobile",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
