--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,7 +15,7 @@
     "@expo-google-fonts/playfair-display": "^0.4.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "convex": "^1.31.6",
-    "expo": "~54.0.32",
+    "expo": "~54.0.33",
     "expo-font": "~14.0.11",
     "expo-haptics": "^15.0.8",
     "expo-local-authentication": "^17.0.8",
@@ -37,5 +37,12 @@
     "@types/react": "~19.1.10",
     "typescript": "~5.9.2"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": ["react-native-nfc-manager"]
+      }
+    }
+  }
 }
