--- a/firmware/Gatekeeper/platformio.ini
+++ b/firmware/Gatekeeper/platformio.ini
@@ -5,7 +5,11 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	bblanchon/ArduinoJson @ ^7.0.4
-	https://github.com/elechouse/PN532.git
-	links2004/WebSockets @ ^2.4.1
-    # For LittleFS
-    lorol/LittleFS_esp32 @ ^1.0.6
+	arduino-libraries/NTPClient @ ^3.2.1
+	adafruit/Adafruit PN532
+
+build_unflags = 
+	-std=gnu++11
+
+build_flags = 
+	-std=gnu++17
