--- a/firmware/Watchman/platformio.ini
+++ b/firmware/Watchman/platformio.ini
@@ -4,4 +4,10 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-	nokeek/LD2410 @ ^0.1.3
+	ncmreynolds/ld2410 @ ^0.1.4
+
+build_unflags = 
+	-std=gnu++11
+
+build_flags = 
+	-std=gnu++17
