fix: biometric tests use production drivers with LED_BUILTIN fallback
- 04_finger_vein: uses FingerVeinAuth.h from Gatekeeper, interactive menu
- 05_face_recognition: uses FaceAuth.h from Gatekeeper, interactive menu
- Added C++17 build flags for inline static variables
- Added LED_BUILTIN fallback for ESP32 (pin 2)
- Both tests now build successfully

--- a/firmware/tests/04_finger_vein/platformio.ini
+++ b/firmware/tests/04_finger_vein/platformio.ini
@@ -1,8 +1,14 @@
 ; Waveshare Finger Vein Sensor Test
-; Tests UART communication with finger vein module
+; Uses the actual FingerVeinAuth driver from Gatekeeper firmware
 
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+
+; Include the Gatekeeper src folder to access FingerVeinAuth.h and config.h
+build_flags = 
+    -I../../Gatekeeper/src
+    -std=gnu++17
+build_unflags = -std=gnu++11
