--- a/firmware/tests/05_face_recognition/platformio.ini
+++ b/firmware/tests/05_face_recognition/platformio.ini
@@ -1,5 +1,14 @@
+; HLK-TX510 Face Recognition Test
+; Uses the actual FaceAuth driver from Gatekeeper firmware
+
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+
+; Include the Gatekeeper src folder to access FaceAuth.h and config.h
+build_flags = 
+    -I../../Gatekeeper/src
+    -std=gnu++17
+build_unflags = -std=gnu++11
