--- a/firmware/tests/04_finger_vein/platformio.ini
+++ b/firmware/tests/04_finger_vein/platformio.ini
@@ -1,14 +1,8 @@
 ; Waveshare Finger Vein Sensor Test
-; Uses the actual FingerVeinAuth driver from Gatekeeper firmware
+; Standalone hardware verification - no production code dependencies
 
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-
-; Include the Gatekeeper src folder to access FingerVeinAuth.h and config.h
-build_flags = 
-    -I../../Gatekeeper/src
-    -std=gnu++17
-build_unflags = -std=gnu++11
