--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,6 +16,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "convex": "^1.31.6",
     "expo": "~54.0.33",
+    "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.11",
     "expo-haptics": "^15.0.8",
     "expo-local-authentication": "^17.0.8",
@@ -41,7 +42,9 @@
   "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
-        "exclude": ["react-native-nfc-manager"]
+        "exclude": [
+          "react-native-nfc-manager"
+        ]
       }
     }
   }
